Fix jumping Login button.
openscholar/openscholar#3265

--- a/modules/pinserver_authenticate/css/pinserver_authenticate.create.css
+++ b/modules/pinserver_authenticate/css/pinserver_authenticate.create.css
@@ -4,6 +4,7 @@
   -webkit-padding-start: 0;
   height: auto;
   margin: 10px 0;
+  padding-top: 5px;
 }
 
 .pin-button,
